<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="male">Male</string>
    <string name="male_icon_mage">Male Icon mage</string>
    <string name="female">Female</string>
    <string name="female_icon_mage">Female Icon mage</string>
    <string name="height">Height</string>
    <string name="recorded_height">100cm</string>
    <string name="weight">Weight</string>
    <string name="recorded_weight">50kg</string>
    <string name="subtract_weight">Subtract Weight</string>
    <string name="add_weight">Add Weight</string>
    <string name="age">Age</string>
    <string name="recorded_age">20 years</string>
    <string name="subtract_age">Subtract Age</string>
    <string name="add_age">Add Age</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="bmi_result">BMI Result</string>
    <string name="back_to_bmi_calculator">Back to BMI Calculator</string>
    <string name="error">Internal Error</string>
    <string name="low_weight_category">Low Weight</string>
    <string name="normal_weight_category">Normal Weight</string>
    <string name="over_weight_category">Over Weight</string>
    <string name="obesity_weight_category">Obesity</string>
    <string name="low_weight_description">You are underweight for your height</string>
    <string name="normal_weight_description">You have a normal weight for your height</string>
    <string name="over_weight_description">You are overweight for your height</string>
    <string name="obesity_weight_description">You are obese considering your height</string>
</resources>